# csvdb

./: .gitignore  CHANGES  ChangeLog  Makefile  Makefile.am  Makefile.inc  README  configure.ac  test-altsep.csv  test-unnamed.csv  test.csv
doc/: csvdb-doc.html  queries
inc/: csvdb-client.h  csvdb.h
m4/: ChangeLog
man/: csvdb.1
po/: ChangeLog  POTFILES  POTFILES.in  csvdb.pot
src/: Makefile.am
src/client/: history.c  main.c  rdln.c  tty.c
src/lib/: column.c  lib.c  nvp.c  result.c  row.c  sql.c  table.c
